# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(ark_independent_build)) {
  import("//ark/js_runtime/js_runtime_config.gni")
  import("//build/ohos.gni")
} else {
  import("//js_runtime/js_runtime_config.gni")
  import("$build_root/ark.gni")
}

source_set("ark_js_vm_set") {
  sources = [ "main.cpp" ]

  public_configs = [
    "$js_root:ark_jsruntime_common_config",
    "$js_root:ark_jsruntime_public_config",
  ]

  deps = [
    "$ark_root/libpandabase:libarkbase",
    "$js_root:libark_jsruntime",
  ]
}

if (!defined(ark_independent_build)) {
  ohos_executable("ark_js_vm") {
    deps = [ ":ark_js_vm_set" ]

    install_enable = false

    part_name = "ark_js_runtime"
    subsystem_name = "ark"
  }
}
